examples/3_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: caddy

spec:
  containers:
    - name: caddy
      image: caddy:2
