examples/6_configmap_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: caddy

spec:
  volumes:
    - name: my-cf-volume
      configMap:
        name: my-html-files
  containers:
    - name: caddy
      image: caddy:2
      volumeMounts:
        - name: my-cf-volume # .spec.volumes[].name で定義した名前
          mountPath: /usr/share/caddy
