examples/7_pvc_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mariadb

spec:
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: mariadb

  containers:
    - name: mariadb
      image: mariadb:11
      volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
