examples/5_lb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-lb

spec:
  type: LoadBalancer
  selector:
    app: caddy
  ports:
    - name: web
      port: 8080
      targetPort: 80
