examples/5_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy

spec:
  ingressClassName: traefik
  rules:
    - host: caddy.local.trapti.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
